# cactus

./: .xcode.env.local  README.md
cactus/: CMakeLists.txt  cactus_build_info.cpp  cactus_completion.cpp  cactus_context.cpp  cactus_ffi.cpp  cactus_ffi.h  cactus_multimodal.cpp  cactus_stt.cpp  cactus_stt.h  cactus_tokenization.cpp  chat.cpp  common.cpp  common.h  ggml-metal.m  ggml-quants.c  ggml.c  llama-mmap.cpp
cactus-flutter/: README.md  ffigen.yaml
cactus-flutter/lib/: cactus.dart  context.dart  ffi_bindings.dart  init_params.dart
cactus-ios/: CMakeLists.txt  README.md
cactus-ios/Cactus/: CactusSDK-Bridging-Header.h  CactusSTTService.swift  iOSAudioInputManager.swift
cactus-ios/CactusTests/: CactusSTTServiceTests.swift  iOSAudioInputManagerTests.swift
cactus-react/: README.md  cactus-react-native-3.podspec  cactus-react-native-4.podspec  cactus-react-native-5.podspec  cactus-react-native.podspec  package.json
cactus-react/ios/: AudioInputModule.mm  AudioInputModule.swift  Cactus.mm  CactusContext.h  CactusContext.mm  CactusReact-Bridging-Header.h
cactus-react/src/: VoiceToText.ts  index.ts
cactus-tests/: test.cpp  test_core_api.cpp
cactus/ggml-cpu/: ggml-cpu.c
examples/cpp/: CMakeLists.txt  build.sh  main.cpp
examples/cpp-embed-text/: CMakeLists.txt  build.sh  main.cpp
examples/cpp-ffi-test/: CMakeLists.txt  build.sh  main.cpp
examples/cpp-llm/: main.cpp
examples/cpp-tts/: main.cpp
examples/cpp-vlm/: conversation_log.txt  main_core.cpp
examples/flutter-cctv/: pubspec.yaml
scripts/: build-ios.sh  patch-from-llama-cpp.sh
(+64 files in other folders)
